padding fixes, and contact alignment jazz

--- a/css/index.styl
+++ b/css/index.styl
@@ -154,7 +154,7 @@ p
 #skills
   //box-shadow 0px -5px 20px rgba(0,0,0,.2)
   min-height 500px
-  padding 50px 0px
+  padding 50px 0px 100px 0px
   .skill
     margin-bottom 80px
     h3
@@ -185,13 +185,13 @@ p
   //background $mainColor
   box-shadow 0px 0px 40px rgba(0,0,0,.4)
   min-height 500px
-  padding 50px 0px
+  padding 50px 0px 100px 0px
 
 
 #gents
   position relative
   margin 0px auto
-  padding 50px 0px
+  padding 50px 0px 100px 0px
   h3
     font-weight 500
   .body
